# django_docker

./: Dockerfile  README.md  data.csv  docker-compose.yml  pyproject.toml
data_loader/: admin.py  models.py
data_loader/management/commands/: load_data.py
data_loader/migrations/: 0001_initial.py  0002_datarecord_regiao_datarecord_uf.py  0003_product.py
data_loader/templates/admin/: product_detail.html  product_summary.html
django_test/: settings.py
