[tool.poetry]
name = "django-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
dj-database-url = "^2.2.0"
psycopg2 = "^2.9.9"
pandas = "^2.2.3"
aiohttp = "^3.10.8"
pytest = "^8.3.3"
pytest-django = "^4.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
